--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "fortify-schema",
   "version": "1.0.0",
   "description": "TypeScript interface-like schema validation system that's easier to use than Zod",
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/schema.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/schema.d.ts"
+    },
+    "./package.json": "./package.json"
   },
   "files": [
     "dist",
@@ -18,7 +20,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "npm run build:simple",
+    "build": "npm run clean && rollup -c",
     "build:rollup": "npm run clean && rollup -c",
     "build:simple": "node build.js",
     "build:tsc": "npm run clean && tsc -p tsconfig.build.json",
@@ -29,7 +31,9 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "test:build": "node test-build.js",
+    "test:build": "npm run test:build:cjs && npm run test:build:esm",
+    "test:build:cjs": "node test-build-cjs.cjs",
+    "test:build:esm": "node test-build-esm.mjs",
     "prepublishOnly": "npm run build && npm run test:build",
     "clean": "rimraf dist"
   },
@@ -56,6 +60,10 @@
   },
   "homepage": "https://github.com/Nehonix-Team/fortify-schema#readme",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -67,7 +75,7 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "rollup": "^3.29.2",
-    "rollup-plugin-typescript2": "^0.35.0",
+    "rollup-plugin-dts": "^6.0.2",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
