enhanced package.json by adding more keywords for better visibility

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortify-schema",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "TypeScript interface-like schema validation system that's easier to use than Zod",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -17,7 +17,9 @@
     "dist",
     "src",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "CHANGELOG.md",
+    "docs"
   ],
   "scripts": {
     "build": "npm run clean && rollup -c",
@@ -37,18 +39,123 @@
     "prepublishOnly": "npm run build && npm run test:build",
     "clean": "rimraf dist"
   },
-  "keywords": [
-    "schema",
-    "validation",
-    "typescript",
-    "interface",
-    "zod",
-    "joi",
-    "yup",
-    "runtime-validation",
-    "type-safe",
-    "schema-validation"
-  ],
+  
+    "keywords": [
+      "schema",
+      "validation",
+      "typescript",
+      "type-safe",
+      "interface",
+      "runtime-validation",
+      "schema-validation",
+      "data-validation",
+      "input-validation",
+      "form-validation",
+      "api-validation",
+      "json-schema",
+      "type-inference",
+      "compile-time-safety",
+      "zod-alternative",
+      "joi-alternative",
+      "yup-alternative",
+      "ajv-alternative",
+      "typescript-first",
+      "type-checking",
+      "parse",
+      "parser",
+      "serialization",
+      "deserialization",
+      "constraints",
+      "strict-typing",
+      "runtime-types",
+      "interface-like",
+      "schema-builder",
+      "validation-library",
+      "type-validation",
+      "object-validation",
+      "array-validation",
+      "string-validation",
+      "number-validation",
+      "email-validation",
+      "url-validation",
+      "date-validation",
+      "uuid-validation",
+      "phone-validation",
+      "pattern-validation",
+      "regex-validation",
+      "union-types",
+      "literal-types",
+      "optional-fields",
+      "required-fields",
+      "nested-objects",
+      "nested-validation",
+      "schema-composition",
+      "schema-transformation",
+      "schema-merging",
+      "pick-omit",
+      "partial-required",
+      "type-coercion",
+      "loose-mode",
+      "strict-mode",
+      "error-handling",
+      "validation-errors",
+      "safe-parsing",
+      "try-catch",
+      "api-schema",
+      "rest-api",
+      "graphql",
+      "json-api",
+      "form-schema",
+      "configuration",
+      "config-validation",
+      "environment-variables",
+      "env-validation",
+      "database-schema",
+      "model-validation",
+      "dto",
+      "data-transfer-object",
+      "request-validation",
+      "response-validation",
+      "middleware",
+      "express",
+      "fastify",
+      "koa",
+      "node",
+      "nehonix",
+      "typescript",
+      "javascript",
+      "fortifyjs",
+      "nodejs",
+      "backend",
+      "frontend",
+      "fullstack",
+      "react",
+      "vue",
+      "angular",
+      "next",
+      "nuxt",
+      "svelte",
+      "web-development",
+      "developer-experience",
+      "dx",
+      "clean-code",
+      "maintainable",
+      "readable",
+      "intuitive",
+      "simple",
+      "powerful",
+      "lightweight",
+      "performant",
+      "tree-shakable",
+      "bundle-size",
+      "zero-dependencies",
+      "enterprise",
+      "production-ready",
+      "battle-tested",
+      "reliable",
+      "robust",
+      "scalable"
+    ],
   "author": "Nehonix Team <support@nehonix.space> (https://nehonix.space)",
   "license": "MIT",
   "repository": {
