doc: docs updated: added a comprehensive reference for ALL operations available in Fortify Schema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
     "node_modules",
     "dist",
     "**/*.test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "**/private/**",
+    "**/__tests__/**"
   ]
 }
