--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortify-schema",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "TypeScript interface-like schema validation system that's easier to use than Zod",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -156,7 +156,7 @@
     "scalable"
   ],
   "author": "Nehonix Team <support@nehonix.space> (https://nehonix.space)",
-  "license": "MIT",
+  "license": "GNU Affero General Public License v3",
   "repository": {
     "type": "git",
     "url": "https://github.com/Nehonix-Team/fortify-schema.git"
