--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
+    "skipLibCheck": true, 
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
@@ -33,6 +33,9 @@
     "**/*.test.ts",
     "**/*.spec.ts",
     "**/private/**",
-    "**/__tests__/**"
+    "**/__tests__/**",
+    "**/src/core/compiler/*",
+
   ]
 }
+ 
