chore: Update package version to 1.1.0 and enhance description
- Bump version to 1.1.0 to reflect major conditional validation improvements
- Update description to highlight world-class conditional validation capabilities
- Add conditional validation keywords for better npm discoverability
- Emphasize 20+ operators, TypeScript integration, and enterprise performance

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fortify-schema",
-  "version": "1.0.15",
-  "description": "TypeScript interface-like schema validation system that's easier to use than Zod",
+  "version": "1.1.0",
+  "description": "The world's most advanced conditional validation library with complete TypeScript integration. 20+ operators, perfect type inference, and enterprise-grade performance.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/schema.d.ts",
@@ -44,6 +44,8 @@
   "keywords": [
     "schema",
     "validation",
+    "conditional-validation",
+    "advanced-validation",
     "typescript",
     "type-safe",
     "interface",
@@ -90,6 +92,11 @@
     "required-fields",
     "nested-objects",
     "nested-validation",
+    "conditional-logic",
+    "business-rules",
+    "dynamic-validation",
+    "context-aware",
+    "field-dependencies",
     "schema-composition",
     "schema-transformation",
     "schema-merging",
