doc: readmes updated

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "build:tsc": "npm run clean && tsc -p tsconfig.build.json",
     "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "dev": "rollup -c -w",
-    "test": "jest",
+    "test": "bun src/__tests__/conditional-operators-test.ts",
+    "tests": "jest",
     "test:watch": "jest --watch",
     "demo": "bun examples/superiority-demo.ts",
     "demo:performance": "bun src/core/performance/benchmark.ts",
