--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -69,6 +69,11 @@
         "command": "fortify.listColorSchemes",
         "title": "List Available Color Schemes",
         "category": "Fortify"
+      },
+      {
+        "command": "fortify.cleanupThemes",
+        "title": "Cleanup Themes and Settings",
+        "category": "Fortify"
       }
     ],
     "configuration": {
