--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortify-schema",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "The Future of TypeScript Validation. 20+ operators, perfect type inference, and enterprise-grade performance.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -209,5 +209,9 @@
   },
   "engines": {
     "node": ">=16.0.0"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1"
   }
 }
