fix: fixed nested properties obj issues; we've created a comprehensive test in 'src\__tests__\test_nested_obj.ts' for testing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortify-schema",
-  "version": "2.0.6",
+  "version": "2.0.8",
   "description": "The Future of TypeScript Validation. 20+ operators, perfect type inference, and enterprise-grade performance.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -34,6 +34,7 @@
     "demo": "bun examples/superiority-demo.ts",
     "demo:performance": "bun src/core/performance/benchmark.ts",
     "benchmark": "node scripts/benchmark.js",
+    "benchmark:nestedObject": "tsx src/__tests__/test_nested_obj.ts",
     "benchmark:core": "bun src/bench/performance-comparison.ts",
     "benchmark:precompile": "bun src/bench/precompilation-benchmark.ts",
     "benchmark:vs-zod": "node scripts/benchmark.js",
