feat: Updated ConditionalEvaluator to support parent context resolution for nested validation Modified nested object validation to pass full data context for conditional field resolution fix: Nested conditional validation now correctly fails when types don't match

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "strict": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true, 
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationMap": true,
@@ -24,9 +24,7 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": false
   },
-  "include": [
-    "src/**/*"
-  ],
+  "include": ["src/**/*", "__tests__"],
   "exclude": [
     "node_modules",
     "dist",
@@ -34,8 +32,6 @@
     "**/*.spec.ts",
     "**/private/**",
     "**/__tests__/**",
-    "**/src/core/compiler/*",
-
+    "**/src/core/compiler/*"
   ]
 }
- 
