--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fortify-schema",
-  "version": "2.0.21",
+  "version": "2.1.0",
   "description": "A modern TypeScript validation library designed around familiar interface syntax and powerful conditional validation. Experience schema validation that feels natural to TypeScript developers while unlocking advanced runtime validation capabilities.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -192,7 +192,7 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-typescript": "^11.1.3",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.19.1",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -213,6 +213,7 @@
   },
   "dependencies": {
     "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1"
+    "ajv-formats": "^3.0.1",
+    "tslib": "^2.8.1"
   }
 }
